<resources>
    <string name="app_name">Score Up!</string>
    <string name="log_in_text">Log In</string>
    <string name="password_text">Password</string>
    <string name="email_id_text">Email Id</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="submit_text">Submit</string>
    <string name="don_t_have_an_account_yet_text">Don\'t have an account yet?</string>
    <string name="register_text">Register</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="tnc_text">I agree to the Terms and Conditions</string>
    <string name="please_wait_text">Please Wait&#8230;</string>
    <string name="refreshing_text">Refreshing&#8230;</string>
    <string name="error_first_name_text">Please enter your first name.</string>
    <string name="valid_details_text">All the details you\'ve entered are valid</string>
    <string name="error_last_name_text">Please enter your last name</string>
    <string name="error_email_id_text">Please enter your email ID</string>
    <string name="error_password_text">Please enter a password.</string>
    <string name="error_confirm_password_text">You are required to enter the password again.</string>
    <string name="error_passwords_mismatch_text">The two passwords you entered do not match.</string>
    <string name="error_passwrod_length_text">Password should at least have 8 characters.</string>
    <string name="error_tnc_unchecked_text">You have to agree to the terms and conditions to move forward.</string>
    <string name="choices_heading_text">Add one or more of your preferred sports</string>
    <string name="choices_basketball_text">Basketball</string>
    <string name="choices_badminton_text">Badminton</string>
    <string name="choices_swimming_text">Swimming</string>
    <string name="choices_tennis_text">Tennis</string>
    <string name="choices_cricket_text">Cricket</string>
    <string name="choices_football_text">Football</string>
    <string name="choices_table_tennis_text">Table Tennis</string>
    <string name="choices_ice_hockey_text">Ice Hockey</string>
    <string name="save_text">Save</string>
    <string name="title_activity_news_display">MainActivity</string>
    <string name="title_activity_nav_drawer_activtiy">NavDrawerActivtiy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_ongoing">Ongoing</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_upcoming_heading">Upcoming</string>
    <string name="title_ongoing_heading">Ongoing</string>
    <string name="edit_choices_settings_text">Edit Choices</string>
    <string name="reminders_settings_text">Reminders</string>
    <string name="open_text">Open</string>
    <string name="close_text">Close</string>
    <string name="log_out_alert_dialog_title_text">Log Out</string>
    <string name="log_out_alert_dialog_message_text">Are you sure you want to log out?</string>
    <string name="yes_text">Yes</string>
    <string name="cancel_text">Cancel</string>
    <string name="sports_news_image_text">Sports News Image</string>
    <string name="weather_text">Weather</string>
    <string name="refresh_text">Refresh</string>
    <string name="options_upcoming_screen">Options Upcoming Screen</string>
    <string name="vs_text">vs</string>
    <string name="nothing_to_display_yet_text">Nothing to display yet. Try refreshing.</string>
    <string name="set_reminder_text">Set reminder</string>
    <string name="notification_channel_name">Channel Reminder</string>
    <string name="notification_channel_description">Notification channel for setting reminders for upcoming matches.</string>
    <string name="no_reminder_set_text">You have not set reminders for any upcoming matches yet.</string>
    <string name="sports_option_dropdown_text">Sports Option Dropdown</string>
</resources>