<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activities.LogInActivity">

        <com.example.scoreup.utils.SUTextViewHeading
            android:id="@+id/tv_li_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/log_in_text"
            android:textColor="@color/colorThemePrimary"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/til_li_email_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_li_email_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal_entries"
            android:layout_marginTop="@dimen/margin_from_title"
            android:gravity="center_vertical"
            android:hint="@string/email_id_text"
            android:paddingHorizontal="5dp"
            android:textColorHint="@color/colorGrey"
            app:layout_constraintBottom_toTopOf="@id/til_li_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_li_log_in">

            <com.example.scoreup.utils.SUEditTextLight
                android:id="@+id/et_li_email_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorThemeSecondaryText"
                android:textSize="@dimen/text_size_entries" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_li_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal_entries"
            android:layout_marginTop="@dimen/margin_from_other_entries"
            android:gravity="center_vertical"
            android:hint="@string/password_text"
            android:paddingHorizontal="5dp"
            android:textColorHint="@color/colorGrey"
            app:layout_constraintBottom_toTopOf="@id/btn_li_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_li_email_id">

            <com.example.scoreup.utils.SUEditTextLight
                android:id="@+id/et_li_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:inputType="textPassword"
                android:textColor="@color/colorThemeSecondaryText"
                android:textSize="@dimen/text_size_entries" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.example.scoreup.utils.SUButtonLight
            android:id="@+id/btn_li_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_from_end_of_entries"
            android:background="@color/colorInvisible"
            android:text="@string/forgot_password_text"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/btn_text_size_small"
            app:layout_constraintBottom_toTopOf="@id/btn_li_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_li_password" />

        <com.example.scoreup.utils.SUButtonBold
            android:id="@+id/btn_li_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_margin_horizontal_entries"
            android:layout_marginTop="@dimen/margin_from_other_entries"
            android:background="@drawable/button_background_1"
            android:text="@string/submit_text"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/btn_text_size_medium"
            app:layout_constraintBottom_toTopOf="@id/ll_li_no_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_li_forgot_password" />

        <LinearLayout
            android:id="@+id/ll_li_no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_from_other_entries"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_li_submit">

            <com.example.scoreup.utils.SUTextViewLight
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_yet_text"
                android:textColor="@color/colorThemePrimary"
                android:textSize="@dimen/btn_text_size_small" />

            <com.example.scoreup.utils.SUTextViewBold
                android:id="@+id/tv_li_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="@string/register_text"
                android:textColor="@color/colorThemePrimary"
                android:textSize="@dimen/btn_text_size_small" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>